# opencode-tauri-refactor

./: .gitattributes  .gitignore  CI-CD-GUIDE.md  COMPLETION-REPORT.md  MIGRATION-GUIDE.md  README.md  START-HERE.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci-test.yml  tauri-build.yml
scripts/: generate_icons.py  normalize_line_endings.py
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  terminal.rs
src/hooks/: use-electron-api.test.ts  use-electron-api.ts
src/types/: electron-api.test.ts  electron-api.ts
